# benchmark-app-servers

./: .gitignore  README.md
servers/akka-http/: build.sbt
servers/ballerina/: Ballerina.toml  hello_service.bal
servers/bjoern-with-bottle/: Pipfile  app.py
servers/bottle/: Pipfile  app.py
servers/colossus/: build.sbt
servers/cowboy/: .gitignore  README.md  mix.exs
servers/cowboy-with-maru/: mix.exs
servers/cowboy-with-phoenix/: README.md  mix.exs
servers/cowboy-with-plug/: mix.exs
servers/cowboy2-with-plug/: README.md  mix.exs
servers/echo/: main.go
servers/express/: app.js  package.json
servers/finagle/: build.sbt
servers/finatra/: build.sbt
servers/finch/: build.sbt
servers/flask/: Pipfile
servers/gin/: main.go
servers/go_fast_http/: main.go
servers/go_net_http/: main.go
servers/gunicorn/: Pipfile  app.py
servers/gunicorn-django/: Pipfile  db.sqlite3  manage.py
servers/gunicorn-with-bottle-and-meinheld/: Pipfile  app.py
servers/gunicorn-with-flask/: Pipfile  app.py
servers/gunicorn-with-flask-and-meinheld/: Pipfile
servers/gunicorn-with-meinheld/: Pipfile  app.py
servers/hanami/: .env.development  .env.production  .env.test  Gemfile  README.md
servers/http4s/: build.sbt
servers/hyper/: Cargo.toml
servers/iron/: Cargo.toml
servers/iron/src/: main.rs
servers/japronto/: Pipfile  app.py
servers/jester/: app.nimble
servers/play2-netty/: build.sbt
servers/rails-unicorn/: .gitignore  Gemfile
servers/rocket/: Cargo.toml  Rocket.toml
servers/uwsgi-with-flask/: Pipfile  app.py  config.ini
(+68 files in other folders)
